--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ author: Some Person
 ###############################################
 
 navbar-links:
-  About Me: "Acerca de mi"
-  Resources:
+  Acerca de: "Acerca de mi"
+  Recursos:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
   Autor: "https://deanattali.com"
