--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ author: Some Person
 
 navbar-links:
   Acerca de: "Acerca de mi"
-  Recursos:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+  Redes Sociales:
+    - Instagram: "https://beautifuljekyll.com"
+    - Facebook: "https://www.markdowntutorial.com/"
   Autor: "https://deanattali.com"
 
 ################
