--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ author: Some Person
 navbar-links:
   Acerca de: "Acerca de mi"
   Redes Sociales:
-    - Instagram: "https://beautifuljekyll.com"
-    - Facebook: "https://www.markdowntutorial.com/"
-  Autor: "https://deanattali.com"
+    - Instagram: "https://www.instagram.com/brianaguirre1830/"
+    - Facebook: "https://www.facebook.com/brian.aguirre.121"
+  Curriculum Vitae: "https://deanattali.com"
 
 ################
 # --- Logo --- #
