--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Redes Sociales:
     - Instagram: "https://www.instagram.com/brianaguirre1830/"
     - Facebook: "https://www.facebook.com/brian.aguirre.121"
-  Curriculum Vitae: "https://deanattali.com"
+  Curriculum Vitae: "https://resume.io/r/xiX0Y5aVL"
 
 ################
 # --- Logo --- #
